src/wladus.output
Terminals unused in grammar

   '+'
   '-'
   '*'
   '/'


State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: declarations

    2 declarations: declarations declaration
    3             | declaration

    4 declaration: var_declaration
    5            | func_declaration

    6 var_declaration: TYPE ID ';'

    7 func_declaration: TYPE ID '(' params ')' compound_statement

    8 params: params ',' TYPE ID
    9       | TYPE ID
   10       | %empty

   11 compound_statement: '{' local_declarations statement_list '}'

   12 local_declarations: local_declarations local_var_declaration
   13                   | %empty

   14 local_var_declaration: TYPE ID ';'

   15 statement_list: statement_list statement
   16               | %empty

   17 statement: expression_statement
   18          | conditional_statement
   19          | iteration_statement
   20          | return_statement

   21 expression_statement: expression ';'

   22 conditional_statement: IF '(' expression ')' compound_statement
   23                      | IF '(' expression ')' compound_statement ELSE compound_statement

   24 iteration_statement: WHILE '(' expression ')' compound_statement

   25 return_statement: RETURN expression ';'
   26                 | RETURN ';'

   27 expression: var EQ expression
   28           | simple_expression

   29 var: ID

   30 simple_expression: op_expression CEQ op_expression
   31                  | op_expression CNE op_expression
   32                  | op_expression CLT op_expression
   33                  | op_expression CLE op_expression
   34                  | op_expression CGT op_expression
   35                  | op_expression CGE op_expression
   36                  | op_expression

   37 op_expression: op_expression PLUS term
   38              | op_expression MINUS term
   39              | op_expression MULT term
   40              | op_expression DIV term
   41              | term

   42 term: '(' simple_expression ')'
   43     | var
   44     | call
   45     | NUM
   46     | DEC
   47     | QUOTES string QUOTES
   48     | QUOTES QUOTES

   49 call: ID '(' args ')'
   50     | WRITE '(' simple_expression ')'
   51     | READ '(' var ')'

   52 args: arg_list
   53     | %empty

   54 arg_list: arg_list ',' simple_expression
   55         | simple_expression

   56 string: string STR
   57       | string ITP_START simple_expression ITP_END
   58       | %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 22 23 24 42 49 50 51
')' (41) 7 22 23 24 42 49 50 51
'*' (42)
'+' (43)
',' (44) 8 54
'-' (45)
'/' (47)
';' (59) 6 14 21 25 26
'{' (123) 11
'}' (125) 11
error (256)
ID (258) 6 7 8 9 14 29 49
TYPE (259) 6 7 8 9 14
NUM (260) 45
DEC (261) 46
STR (262) 56
WHILE (263) 24
IF (264) 22 23
ELSE (265) 23
RETURN (266) 25 26
WRITE (267) 50
READ (268) 51
EQ (269) 27
CEQ (270) 30
CNE (271) 31
CLT (272) 32
CLE (273) 33
CGT (274) 34
CGE (275) 35
PLUS (276) 37
MINUS (277) 38
MULT (278) 39
DIV (279) 40
QUOTES (280) 47 48
ITP_START (281) 57
ITP_END (282) 57


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
prog (39)
    on left: 1, on right: 0
declarations (40)
    on left: 2 3, on right: 1 2
declaration (41)
    on left: 4 5, on right: 2 3
var_declaration (42)
    on left: 6, on right: 4
func_declaration (43)
    on left: 7, on right: 5
params (44)
    on left: 8 9 10, on right: 7 8
compound_statement (45)
    on left: 11, on right: 7 22 23 24
local_declarations (46)
    on left: 12 13, on right: 11 12
local_var_declaration (47)
    on left: 14, on right: 12
statement_list (48)
    on left: 15 16, on right: 11 15
statement (49)
    on left: 17 18 19 20, on right: 15
expression_statement (50)
    on left: 21, on right: 17
conditional_statement (51)
    on left: 22 23, on right: 18
iteration_statement (52)
    on left: 24, on right: 19
return_statement (53)
    on left: 25 26, on right: 20
expression (54)
    on left: 27 28, on right: 21 22 23 24 25 27
var (55)
    on left: 29, on right: 27 43 51
simple_expression (56)
    on left: 30 31 32 33 34 35 36, on right: 28 42 50 54 55 57
op_expression (57)
    on left: 37 38 39 40 41, on right: 30 31 32 33 34 35 36 37 38 39
    40
term (58)
    on left: 42 43 44 45 46 47 48, on right: 37 38 39 40 41
call (59)
    on left: 49 50 51, on right: 44
args (60)
    on left: 52 53, on right: 49
arg_list (61)
    on left: 54 55, on right: 52 54
string (62)
    on left: 56 57 58, on right: 47 56 57


State 0

    0 $accept: . prog $end
    1 prog: . declarations
    2 declarations: . declarations declaration
    3             | . declaration
    4 declaration: . var_declaration
    5            | . func_declaration
    6 var_declaration: . TYPE ID ';'
    7 func_declaration: . TYPE ID '(' params ')' compound_statement

    TYPE  shift, and go to state 1

    prog              go to state 2
    declarations      go to state 3
    declaration       go to state 4
    var_declaration   go to state 5
    func_declaration  go to state 6


State 1

    6 var_declaration: TYPE . ID ';'
    7 func_declaration: TYPE . ID '(' params ')' compound_statement

    ID  shift, and go to state 7


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 8


State 3

    1 prog: declarations .  [$end]
    2 declarations: declarations . declaration
    4 declaration: . var_declaration
    5            | . func_declaration
    6 var_declaration: . TYPE ID ';'
    7 func_declaration: . TYPE ID '(' params ')' compound_statement

    TYPE  shift, and go to state 1

    $default  reduce using rule 1 (prog)

    declaration       go to state 9
    var_declaration   go to state 5
    func_declaration  go to state 6


State 4

    3 declarations: declaration .

    $default  reduce using rule 3 (declarations)


State 5

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 6

    5 declaration: func_declaration .

    $default  reduce using rule 5 (declaration)


State 7

    6 var_declaration: TYPE ID . ';'
    7 func_declaration: TYPE ID . '(' params ')' compound_statement

    ';'  shift, and go to state 10
    '('  shift, and go to state 11


State 8

    0 $accept: prog $end .

    $default  accept


State 9

    2 declarations: declarations declaration .

    $default  reduce using rule 2 (declarations)


State 10

    6 var_declaration: TYPE ID ';' .

    $default  reduce using rule 6 (var_declaration)


State 11

    7 func_declaration: TYPE ID '(' . params ')' compound_statement
    8 params: . params ',' TYPE ID
    9       | . TYPE ID
   10       | . %empty  [')', ',']

    TYPE  shift, and go to state 12

    $default  reduce using rule 10 (params)

    params  go to state 13


State 12

    9 params: TYPE . ID

    ID  shift, and go to state 14


State 13

    7 func_declaration: TYPE ID '(' params . ')' compound_statement
    8 params: params . ',' TYPE ID

    ')'  shift, and go to state 15
    ','  shift, and go to state 16


State 14

    9 params: TYPE ID .

    $default  reduce using rule 9 (params)


State 15

    7 func_declaration: TYPE ID '(' params ')' . compound_statement
   11 compound_statement: . '{' local_declarations statement_list '}'

    '{'  shift, and go to state 17

    compound_statement  go to state 18


State 16

    8 params: params ',' . TYPE ID

    TYPE  shift, and go to state 19


State 17

   11 compound_statement: '{' . local_declarations statement_list '}'
   12 local_declarations: . local_declarations local_var_declaration
   13                   | . %empty

    $default  reduce using rule 13 (local_declarations)

    local_declarations  go to state 20


State 18

    7 func_declaration: TYPE ID '(' params ')' compound_statement .

    $default  reduce using rule 7 (func_declaration)


State 19

    8 params: params ',' TYPE . ID

    ID  shift, and go to state 21


State 20

   11 compound_statement: '{' local_declarations . statement_list '}'
   12 local_declarations: local_declarations . local_var_declaration
   14 local_var_declaration: . TYPE ID ';'
   15 statement_list: . statement_list statement
   16               | . %empty  [ID, NUM, DEC, WHILE, IF, RETURN, WRITE, READ, QUOTES, '(', '}']

    TYPE  shift, and go to state 22

    $default  reduce using rule 16 (statement_list)

    local_var_declaration  go to state 23
    statement_list         go to state 24


State 21

    8 params: params ',' TYPE ID .

    $default  reduce using rule 8 (params)


State 22

   14 local_var_declaration: TYPE . ID ';'

    ID  shift, and go to state 25


State 23

   12 local_declarations: local_declarations local_var_declaration .

    $default  reduce using rule 12 (local_declarations)


State 24

   11 compound_statement: '{' local_declarations statement_list . '}'
   15 statement_list: statement_list . statement
   17 statement: . expression_statement
   18          | . conditional_statement
   19          | . iteration_statement
   20          | . return_statement
   21 expression_statement: . expression ';'
   22 conditional_statement: . IF '(' expression ')' compound_statement
   23                      | . IF '(' expression ')' compound_statement ELSE compound_statement
   24 iteration_statement: . WHILE '(' expression ')' compound_statement
   25 return_statement: . RETURN expression ';'
   26                 | . RETURN ';'
   27 expression: . var EQ expression
   28           | . simple_expression
   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WHILE   shift, and go to state 29
    IF      shift, and go to state 30
    RETURN  shift, and go to state 31
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35
    '}'     shift, and go to state 36

    statement              go to state 37
    expression_statement   go to state 38
    conditional_statement  go to state 39
    iteration_statement    go to state 40
    return_statement       go to state 41
    expression             go to state 42
    var                    go to state 43
    simple_expression      go to state 44
    op_expression          go to state 45
    term                   go to state 46
    call                   go to state 47


State 25

   14 local_var_declaration: TYPE ID . ';'

    ';'  shift, and go to state 48


State 26

   29 var: ID .  [EQ, CEQ, CNE, CLT, CLE, CGT, CGE, PLUS, MINUS, MULT, DIV, ITP_END, ';', ')', ',']
   49 call: ID . '(' args ')'

    '('  shift, and go to state 49

    $default  reduce using rule 29 (var)


State 27

   45 term: NUM .

    $default  reduce using rule 45 (term)


State 28

   46 term: DEC .

    $default  reduce using rule 46 (term)


State 29

   24 iteration_statement: WHILE . '(' expression ')' compound_statement

    '('  shift, and go to state 50


State 30

   22 conditional_statement: IF . '(' expression ')' compound_statement
   23                      | IF . '(' expression ')' compound_statement ELSE compound_statement

    '('  shift, and go to state 51


State 31

   25 return_statement: RETURN . expression ';'
   26                 | RETURN . ';'
   27 expression: . var EQ expression
   28           | . simple_expression
   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    ';'     shift, and go to state 52
    '('     shift, and go to state 35

    expression         go to state 53
    var                go to state 43
    simple_expression  go to state 44
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47


State 32

   50 call: WRITE . '(' simple_expression ')'

    '('  shift, and go to state 54


State 33

   51 call: READ . '(' var ')'

    '('  shift, and go to state 55


State 34

   47 term: QUOTES . string QUOTES
   48     | QUOTES . QUOTES
   56 string: . string STR
   57       | . string ITP_START simple_expression ITP_END
   58       | . %empty  [STR, QUOTES, ITP_START]

    QUOTES  shift, and go to state 56

    QUOTES    [reduce using rule 58 (string)]
    $default  reduce using rule 58 (string)

    string  go to state 57


State 35

   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   42     | '(' . simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var                go to state 58
    simple_expression  go to state 59
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47


State 36

   11 compound_statement: '{' local_declarations statement_list '}' .

    $default  reduce using rule 11 (compound_statement)


State 37

   15 statement_list: statement_list statement .

    $default  reduce using rule 15 (statement_list)


State 38

   17 statement: expression_statement .

    $default  reduce using rule 17 (statement)


State 39

   18 statement: conditional_statement .

    $default  reduce using rule 18 (statement)


State 40

   19 statement: iteration_statement .

    $default  reduce using rule 19 (statement)


State 41

   20 statement: return_statement .

    $default  reduce using rule 20 (statement)


State 42

   21 expression_statement: expression . ';'

    ';'  shift, and go to state 60


State 43

   27 expression: var . EQ expression
   43 term: var .  [CEQ, CNE, CLT, CLE, CGT, CGE, PLUS, MINUS, MULT, DIV, ';', ')']

    EQ  shift, and go to state 61

    $default  reduce using rule 43 (term)


State 44

   28 expression: simple_expression .

    $default  reduce using rule 28 (expression)


State 45

   30 simple_expression: op_expression . CEQ op_expression
   31                  | op_expression . CNE op_expression
   32                  | op_expression . CLT op_expression
   33                  | op_expression . CLE op_expression
   34                  | op_expression . CGT op_expression
   35                  | op_expression . CGE op_expression
   36                  | op_expression .  [ITP_END, ';', ')', ',']
   37 op_expression: op_expression . PLUS term
   38              | op_expression . MINUS term
   39              | op_expression . MULT term
   40              | op_expression . DIV term

    CEQ    shift, and go to state 62
    CNE    shift, and go to state 63
    CLT    shift, and go to state 64
    CLE    shift, and go to state 65
    CGT    shift, and go to state 66
    CGE    shift, and go to state 67
    PLUS   shift, and go to state 68
    MINUS  shift, and go to state 69
    MULT   shift, and go to state 70
    DIV    shift, and go to state 71

    $default  reduce using rule 36 (simple_expression)


State 46

   41 op_expression: term .

    $default  reduce using rule 41 (op_expression)


State 47

   44 term: call .

    $default  reduce using rule 44 (term)


State 48

   14 local_var_declaration: TYPE ID ';' .

    $default  reduce using rule 14 (local_var_declaration)


State 49

   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   49     | ID '(' . args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'
   52 args: . arg_list
   53     | . %empty  [')']
   54 arg_list: . arg_list ',' simple_expression
   55         | . simple_expression

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    $default  reduce using rule 53 (args)

    var                go to state 58
    simple_expression  go to state 72
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47
    args               go to state 73
    arg_list           go to state 74


State 50

   24 iteration_statement: WHILE '(' . expression ')' compound_statement
   27 expression: . var EQ expression
   28           | . simple_expression
   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    expression         go to state 75
    var                go to state 43
    simple_expression  go to state 44
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47


State 51

   22 conditional_statement: IF '(' . expression ')' compound_statement
   23                      | IF '(' . expression ')' compound_statement ELSE compound_statement
   27 expression: . var EQ expression
   28           | . simple_expression
   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    expression         go to state 76
    var                go to state 43
    simple_expression  go to state 44
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47


State 52

   26 return_statement: RETURN ';' .

    $default  reduce using rule 26 (return_statement)


State 53

   25 return_statement: RETURN expression . ';'

    ';'  shift, and go to state 77


State 54

   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   50     | WRITE '(' . simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var                go to state 58
    simple_expression  go to state 78
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47


State 55

   29 var: . ID
   51 call: READ '(' . var ')'

    ID  shift, and go to state 79

    var  go to state 80


State 56

   48 term: QUOTES QUOTES .

    $default  reduce using rule 48 (term)


State 57

   47 term: QUOTES string . QUOTES
   56 string: string . STR
   57       | string . ITP_START simple_expression ITP_END

    STR        shift, and go to state 81
    QUOTES     shift, and go to state 82
    ITP_START  shift, and go to state 83


State 58

   43 term: var .

    $default  reduce using rule 43 (term)


State 59

   42 term: '(' simple_expression . ')'

    ')'  shift, and go to state 84


State 60

   21 expression_statement: expression ';' .

    $default  reduce using rule 21 (expression_statement)


State 61

   27 expression: . var EQ expression
   27           | var EQ . expression
   28           | . simple_expression
   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    expression         go to state 85
    var                go to state 43
    simple_expression  go to state 44
    op_expression      go to state 45
    term               go to state 46
    call               go to state 47


State 62

   29 var: . ID
   30 simple_expression: op_expression CEQ . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var            go to state 58
    op_expression  go to state 86
    term           go to state 46
    call           go to state 47


State 63

   29 var: . ID
   31 simple_expression: op_expression CNE . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var            go to state 58
    op_expression  go to state 87
    term           go to state 46
    call           go to state 47


State 64

   29 var: . ID
   32 simple_expression: op_expression CLT . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var            go to state 58
    op_expression  go to state 88
    term           go to state 46
    call           go to state 47


State 65

   29 var: . ID
   33 simple_expression: op_expression CLE . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var            go to state 58
    op_expression  go to state 89
    term           go to state 46
    call           go to state 47


State 66

   29 var: . ID
   34 simple_expression: op_expression CGT . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var            go to state 58
    op_expression  go to state 90
    term           go to state 46
    call           go to state 47


State 67

   29 var: . ID
   35 simple_expression: op_expression CGE . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var            go to state 58
    op_expression  go to state 91
    term           go to state 46
    call           go to state 47


State 68

   29 var: . ID
   37 op_expression: op_expression PLUS . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var   go to state 58
    term  go to state 92
    call  go to state 47


State 69

   29 var: . ID
   38 op_expression: op_expression MINUS . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var   go to state 58
    term  go to state 93
    call  go to state 47


State 70

   29 var: . ID
   39 op_expression: op_expression MULT . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var   go to state 58
    term  go to state 94
    call  go to state 47


State 71

   29 var: . ID
   40 op_expression: op_expression DIV . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'

    ID      shift, and go to state 26
    NUM     shift, and go to state 27
    DEC     shift, and go to state 28
    WRITE   shift, and go to state 32
    READ    shift, and go to state 33
    QUOTES  shift, and go to state 34
    '('     shift, and go to state 35

    var   go to state 58
    term  go to state 95
    call  go to state 47


State 72

   55 arg_list: simple_expression .

    $default  reduce using rule 55 (arg_list)


State 73

   49 call: ID '(' args . ')'

    ')'  shift, and go to state 96


State 74

   52 args: arg_list .  [')']
   54 arg_list: arg_list . ',' simple_expression

    ','  shift, and go to state 97

    $default  reduce using rule 52 (args)


State 75

   24 iteration_statement: WHILE '(' expression . ')' compound_statement

    ')'  shift, and go to state 98


State 76

   22 conditional_statement: IF '(' expression . ')' compound_statement
   23                      | IF '(' expression . ')' compound_statement ELSE compound_statement

    ')'  shift, and go to state 99


State 77

   25 return_statement: RETURN expression ';' .

    $default  reduce using rule 25 (return_statement)


State 78

   50 call: WRITE '(' simple_expression . ')'

    ')'  shift, and go to state 100


State 79

   29 var: ID .

    $default  reduce using rule 29 (var)


State 80

   51 call: READ '(' var . ')'

    ')'  shift, and go to state 101


State 81

   56 string: string STR .

    $default  reduce using rule 56 (string)


State 82

   47 term: QUOTES string QUOTES .

    $default  reduce using rule 47 (term)


State 83

   29 var: . ID
   30 simple_expression: . op_expression CEQ op_expression
   31                  | . op_expression CNE op_expression
   32                  | . op_expression CLT op_expression
   33                  | . op_expression CLE op_expression
   34                  | . op_expression CGT op_expression
   35                  | . op_expression CGE op_expression
   36                  | . op_expression
   37 op_expression: . op_expression PLUS term
   38              | . op_expression MINUS term
   39              | . op_expression MULT term
   40              | . op_expression DIV term
   41              | . term
   42 term: . '(' simple_expression ')'
   43     | . var
   44     | . call
   45     | . NUM
   46     | . DEC
   47     | . QUOTES string QUOTES
   48     | . QUOTES QUOTES
   49 call: . ID '(' args ')'
   50     | . WRITE '(' simple_expression ')'
   51     | . READ '(' var ')'
   57 string: string ITP_START . simple_expression ITP_END
